# tianmouc_sdk_minimum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  tianmoucv.cpp  tianmoucv.h
inc/: hardware_def.h  isp.h  isp_opt.h  tianmouc.h  tmc_aop.h  tmc_compress.h  tmc_cop.h  tmc_dev.h  tmc_io.hpp  tmc_proc.h  tmc_v1.h  topdef.h  utils.h
lib/: CMakeLists.txt  libcyusb.so.1
usb/api/: lyn_cam.h
usb/cyusb/install/cyusb_linux_1.0.5/: README  install.sh
usb/cyusb/install/cyusb_linux_1.0.5/src/: 00_fwload  01_getdesc  03_getconfig  04_kerneldriver  05_claiminterface  06_setalternate  08_cybulk  08_cybulk.cpp  09_cyusb_performance  09_cyusb_performance.cpp  cfg_fpga_taoyi  cfg_fpga_taoyi.cpp  config_parser  cybulk_cfg_fpga  cybulk_cfg_fpga_wlj  cyusbd  download_fx2  download_fx3
usb/cyusb/lib/: libcyusb.cpp
usb/cyusb/src/: libcyusb.cpp
usb/inc/: blockQueue.h  bufferPool.h  camera.h  cyusb.h  new_dataReceiver.h  tools.h
